--- a/_includes/home.html
+++ b/_includes/home.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="twelve columns">
       <div id="featured">
-        <img src="assets/themes/idatux/images/slides/speaking.png" />
+        <img src="assets/themes/idatux/images/slides/speaking0.jpg" />
 
         <div>
           <div class="header-block speaking1">
