--- a/_includes/themes/idatux/page.html
+++ b/_includes/themes/idatux/page.html
@@ -7,16 +7,17 @@
     <div class="row">
       <div class="twelve columns">
         <div class="idatux-header">
-          <h1><a href="#">{{ page.title }}</a></h1>
+          <h2>{{ page.title }}</h2>
         </div>
         <hr>
       </div>
     </div>
 
-     <div class="row">
+    <div class="row">
       <div class="twelve columns">
       {{ content }}
       </div>
     </div>
-</div><!-- /content -->
+
+</div>
 {% endif %}
