--- a/_includes/themes/idatux/post.html
+++ b/_includes/themes/idatux/post.html
@@ -1,58 +1,105 @@
 <div id="content" class="container" role="main">
+    <div class="row">
+      <div class="twelve columns">
+        <ul class="sub-nav">
+          <li class="current"><a href="/blog/">Latest Posts</a></li>
+          <li><a href="#">Categorías</a></li>
+          <li><a href="#">Archivos</a></li>
+        </ul>
+      </div>
+    </div>
 
-  <div class="row">
-    <div class="twelve columns">
-      <div class="page-header">
-        <h1>{{ page.title }}</h1>
+    <div class="row">
+      <div class="eight columns">
+
+      <div class="row">
+        <div class="twelve columns">
+          <h2>{{page.title}}</h2>
+          <div class="comment-author-line">
+          {num} <span class="disqus-count-text">Comments</span>
+            <span class="date">Publicado {{page.date | date_to_string}}</span>
+            {% unless page.categories == empty %}
+              <span class="category">en</span>
+              <ul class="categories_box">
+            {% assign categories_list = page.categories %}
+            {% include JB/categories_list %}
+              </ul>
+            {% endunless %}
+            </div>
+          <hr>
+          </div>
+      </div>
+
+      <div class="row">
+        <div class="twelve columns">  
+        {{ content }}
         <hr>
+        </div>    
+      </div>
+      
+      <div class="row">
+        <div class="twelve columns">
+          <ul class="pagination">
+          {% if page.previous %}
+            <li class="unavailable"><a href="">&laquo;</a></li>
+            <li><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Anterior</a></li>
+            <li><a href="">2</a></li>
+          {% else %}
+            <li class="prev disabled"><a>&larr; Anterior</a></li>
+          {% endif %}
+            <li class="current"><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archivos</a></li>
+          {% if page.next %}
+            <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Siguiente &rarr;</a></li>
+          {% else %}
+            <li><a>Siguiente &rarr;</a>
+          {% endif %}
+          </ul>
+        </div>
+
+        <div class="twelve columns">
+          <div> {% include JB/comments %} </div>
+        </div>
+      </div><!-- /row -->
+
+    </div>
+       
+      <div id="sidebar" class="four columns">
+        <div class="speakers-alt-sidebar">
+          <div class="sidenav-title">
+          <div class="bold">Equipo</div><hr>
+          </div>
+        <div class="row">
+          <div class="twelve columns">
+            <dl class="nice contained tabs">
+              <dd><a href="#comentarios1" class="active">Recientes</a></dd>
+              <dd><a href="#comentarios2">Todos</a></dd>
+            </dl>
+            <ul class="nice tabs-content contained">
+              <li id="comentarios1Tab" class="active">
+                <div id="recentcomments" class="dsq-widget"><h6 class="dsq-widget-title">Recent Comments</h6><script type="text/javascript" src="http://idatux.disqus.com/recent_comments_widget.js?num_items=5&hide_avatars=1&avatar_size=32&excerpt_length=200"></script></div>
+              </li>
+              <li id="comentarios2Tab">
+                <div id="popularthreads" class="dsq-widget"><h6 class="dsq-widget-title">Popular Threads</h6><script type="text/javascript" src="   http://idatux.disqus.com/popular_threads_widget.js?num_items=5"></script></div>
+              </li>
+            </ul>
+          </div>
+        </div><!-- /comentarios -->
+
+
+        <div class="row">
+          <div class="twelve columns">
+            <h4>Categorías</h4><hr>
+              <ul class="sidebar-topics topics sort">
+                <li><a href="#" title="Categoría">Categoría</a></li>
+                <li><a href="#" title="Categoría">Categoría</a></li>
+                <li><a href="#" title="Categoría">Categoría</a></li>
+                <li><a href="#" title="Categoría">Categoría</a></li>
+                <li><a href="#" title="Categoría">Categoría</a></li>
+              </ul>
+          </div>
+        </div><!-- /categorias -->
+
       </div>
     </div>
   </div>
-
-  <div class="row">
-    <div class="twelve columns">  
-      {{ content }}
-    <hr>
-    </div>    
-  </div>    
-
-  <div class="row">
-    <div class="twelve columns">
-      <ul class="pagination">
-      {% if page.previous %}
-        <li class="unavailable"><a href="">&laquo;</a></li>
-        <li><a href="{{ BASE_PATH }}{{ page.previous.url }}" title="{{ page.previous.title }}">&larr; Anterior</a></li>
-        <li><a href="">2</a></li>
-      {% else %}
-        <li class="prev disabled"><a>&larr; Anterior</a></li>
-      {% endif %}
-        <li class="current"><a href="{{ BASE_PATH }}{{ site.JB.archive_path }}">Archivos</a></li>
-      {% if page.next %}
-        <li class="next"><a href="{{ BASE_PATH }}{{ page.next.url }}" title="{{ page.next.title }}">Siguiente &rarr;</a></li>
-      {% else %}
-        <li><a>Siguiente &rarr;</a>
-      {% endif %}
-      </ul>
-    </div>
-
-    <div class="twelve columns">
-      <div> {% include JB/comments %} </div>
-    </div>
-  </div><!-- /row -->
-  
-  <div class="row">
-    <div class="twelve columns">
-      <h4>Published</h4>
-      <div class="date"><span>{{ page.date | date_to_long_string }}</span></div>
-
-    {% unless page.tags == empty %}
-      <h4>Tags</h4>
-      <ul class="tag_box">
-      {% assign tags_list = page.tags %}
-      {% include JB/tags_list %}
-      </ul>
-    {% endunless %}  
-    </div>
-  </div>    
-
 </div>
