--- a/_includes/themes/idatux/landing.html
+++ b/_includes/themes/idatux/landing.html
@@ -63,7 +63,7 @@
     </article>
 
     <article class="four columns">
-      <h4 id="mobile"><a href="#">Blog</a></h4>
+      <h4 id="mobile"><a href="/blog">Blog</a></h4>
       <p>Entérese de las últimas noticias en nuestro blog.</p>
       <ul class="posts">
       {% for post in site.posts limit:2 %}
